0.03

0.02 2021-01-27T14:43:15+01:00
 - Add REPOSITORY section to doc.
 - Add .travis.yml file.
 - Add test comments.
 - Fix bugtracker.
 - Fix Makefile.PL in case of use lib.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Rewrite doc to use =head2 in METHODS section.
 - Rewrite usage of Encode to Unicode::UTF8 in example.
 - Update Module::Install to 1.19 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.
 - Update examples/ directory.

0.01 2016-04-20T16:40:33+02:00
 - First version.