@@ -70,6 +70,7 @@ t/data/start_element1.sgml
 t/data/start_element2.sgml
 t/data/start_element3.sgml
 t/data/start_element4.sgml
+t/data/start_element5.sgml
 t/Tag-Reader-Perl/01-use.t
 t/Tag-Reader-Perl/02-version.t
 t/Tag-Reader-Perl/03-new.t
