@@ -1,4 +1,5 @@
 0.03
+ - Add test for element with UTF-8 attribute.
 
 0.02 2021-01-27T14:43:15+01:00
  - Add REPOSITORY section to doc.
